# eyra-c

./: Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
c-tests/src/: basic.c  more.c
src/: lib.rs
tests/: c-tests.rs
