[package]
name = "eyra-c"
version = "0.0.0"
edition = "2021"
publish = false

# Build eyra as a libc.a
[lib]
name = "c"
crate-type = ["staticlib"]

[dependencies]
std = { version = "0.16.9", package = "eyra", features = ["todo", "deprecated-and-unimplemented", "extra-syscalls"] }

[dev-dependencies]
cc = "1.0"
target-lexicon = "0.12.12"
pretty_assertions = "1.4.0"

[build-dependencies]
camino = "1.1.6"
